update 3/11 - v1: fix showtime, upmovie